--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+	font-family: 'Inter', sans-serif;
 }
 
 /*--- HEADER ---*/
@@ -32,52 +33,129 @@ header {
 }
 
 header ul {
-    display: flex;
+	display: inline-flex;
 }
 
 header ul li {
     list-style: none;
 }
 
-header ul li a{
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    list-style: none;
-    margin: 0 15px;
-    font-weight: 600;
-    color: #141414;
-}
-
-header ul li a:hover {
+.button-normal a:hover {
     border-bottom: 2px solid #141414;
 }
 
 section {
     background-color: #141414;
-    height: 100vh;
+    height: 582px;
 }
 
-.button-green a {
-    background-color: #056006;
-    color: #fff;
-    padding: 12px;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    margin-right: 0;
+
+.button {
+	display: inline-flex;
+    height: 30px;
+	padding: 0;
+    margin: 0 10px;
+	background: #BB0A0A;
+	border: none;
+	outline: none;
+	border-radius: 6px;
+	overflow: hidden;
+	font-family: 'Inter', sans-serif;
+	font-size: 15px;
+	font-weight: 600;
+	cursor: pointer;
 }
 
-.button-loja a{
-    background-color: #BB0A0A;
-    color: #fff;
-    padding: 12px;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-    margin-left: 0;
+.button:hover {
+	background: #c91818;
 }
 
-.button-suporte a{
-    background-color: #114E93;
+.button_text,
+.button_icon {
+	display: inline-flex;
+	align-items: center;
+	padding: 0 10px;
+	color: #fff;
+    height: 100%;
+}
+
+a {
+    text-decoration: none;
+}
+
+.normal {
+	display: inline-flex;
+    height: 30px;
+    margin: 0 10px;
+	align-items: center;
+	padding: 0;
+	color: #141414;
+    height: 100%;
+	border: none;
+	outline: none;
+    background: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+	font-weight: 600;
+}
+
+.normal:hover{
+    border-bottom: 2px solid #141414;
+}
+
+ion-icon {
+  color: white;
+}
+
+.button_icon {
+	background: #056006;
+}
+
+.button_support {
+	display: inline-flex;
+    height: 30px;
+	padding: 0;
+    margin: 0 10px;
+	border: none;
+	outline: none;    
+	border-radius: 6px;
+	overflow: hidden;
+	font-family: 'Inter', sans-serif;
+	font-size: 15px;
+	font-weight: 600;
+	cursor: pointer;
+    background: #0c407c;
+}
+
+.button_support:hover {
+    background: #10498a;
+    color: #114E93;
+}
+
+.support_icon {
+    background: #07305f;
+}
+
+/*----BANNER---------------------------------------------------------*/
+.banner-bistec{
+    width: 100%;
+    margin: auto;
+    position: relative;
+}
+
+.banner-bistec img{
+    width: 100%;
+}
+.banner-bistec-texto{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-35%, -50%);
     color: #fff;
-    padding: 12px;
-    border-radius: 6px;
+    font-size: 4vw;
+    font-weight: 600;
+}
+.banner-bistec-texto p{
+    font-size: 3vw;
 }
