--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 
 *{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
 	font-family: 'Inter', sans-serif;
@@ -16,6 +16,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 2px solid #141414;
 }
 
 .header-bistec {
@@ -27,6 +28,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 .logo-bistec {
     align-items: center;
@@ -40,15 +42,48 @@ header ul li {
     list-style: none;
 }
 
-.button-normal a:hover {
-    border-bottom: 2px solid #141414;
+header .normal-menu {
+    margin-left: 60px;
 }
 
-section {
-    background-color: #141414;
-    height: 582px;
+header .normal-menu li{
+    position: relative;
+    list-style: none;
+    display: inline-block;
 }
 
+header .normal-menu li a {
+    display: block;
+    padding: 8px 8px;
+    margin: 0;
+}
+
+header .normal-submenu li a {
+    width: 200px;
+    padding: 12px;
+    text-decoration: none;
+    color: #141414;
+    background: #F3FAFA;
+    font-size: 12px;
+    font-weight: 400;
+    box-shadow: 0.2px 0.2px 0.2px 0.2px rgba(0, 0, 0, 0.473);
+}
+
+header .normal-submenu li a:hover {
+    background: #0c407c;
+    color: white;
+    transition: 0.2s;
+}
+
+header ul ul {
+    position: absolute;
+    top: 38px;
+    display: none;
+}
+
+header ul :hover > ul{
+    display: block;
+}
 
 .button {
 	display: inline-flex;
@@ -68,6 +103,10 @@ section {
 
 .button:hover {
 	background: #c91818;
+}
+
+.button:active{
+	background: #d12b2b;
 }
 
 .button_text,
@@ -100,6 +139,10 @@ a {
 	font-weight: 600;
 }
 
+.normal ion-icon {
+    color: black;
+}
+
 .normal:hover{
     border-bottom: 2px solid #141414;
 }
@@ -129,16 +172,41 @@ ion-icon {
 }
 
 .button_support:hover {
-    background: #133e6e;
+    background: #10498a;
 }
-.button_support .button_text:hover{
-    color: #e6f1f8;
+
+.button_support:active{
+    background: #18559b;
 }
 
 .support_icon {
     background: #07305f;
 }
 
+.menu {
+    display: flex;
+    gap: 2px;
+  }
+  
+.menu li {
+  list-style: none;
+  width: 150px;
+  height: 30px;
+}
+  
+.menu a {
+    display: block;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    transition: all .2s linear;
+    padding: 10px 0;
+}
 /*----BANNER---------------------------------------------------------*/
 .banner-bistec{
     width: 100%;
@@ -160,4 +228,85 @@ ion-icon {
 }
 .banner-bistec-texto p{
     font-size: 3vw;
+}
+
+
+/*---PRODUTOS------------------------------------*/
+.bistec-produtos{
+    padding: 7%;
+    display: flex;
+    margin-bottom: 5.8vw;
+}
+
+.bistec-produtos img{
+    width: 40vw;
+    height: 20vh;
+    margin: 1vw;
+    margin-right: 2.5vw;
+}
+.texto-automacao{
+    font-size: 3vw;
+    margin-left: 2.5vw;
+}
+
+/*--RODAPÉ---------------------------------------------*/   
+
+footer{
+    background-color: #262525;
+    padding-top: 3%; padding-bottom: 3%;
+}
+footer ion-icon{
+    color: #D0CEC6;
+    border: #D0CEC6 solid 0.2vw;
+    border-radius: 100%;
+    padding: 1%;
+    width: 35px;
+    height: 35px;
+    margin-bottom: 10px;
+}
+
+footer ion-icon .special{
+    color: #A0C8F9;
+    border: #A0C8F9 solid 0.2vw;
+}
+
+.redes-sociais{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-bottom: 3px solid #A0C8F9;
+}
+
+footer .contact {
+    margin-top: 10px;
+    display: grid;
+}
+
+footer .contact a {
+    text-decoration: none;
+    font-size: 12px;
+    color: white;
+    text-align: left;
+}
+/*
+.item1 {
+  grid-row-start: 1;
+  grid-column-end: 3;
+}*/
+
+/* footer - copyright*/
+
+.footer-copyright {
+    background-color: #141414;
+    padding: 8px 0;
+}
+
+.footer-copyright p {
+    color: #A0C8F9;
+    text-align: center;
+    border-style: solid;
+    border-color: transparent;
 }
