--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,6 +216,7 @@ ion-icon {
 
 .banner-bistec img{
     width: 100%;
+    height: 580px;
 }
 .banner-bistec-texto{
     position: absolute;
@@ -233,9 +234,9 @@ ion-icon {
 
 /*---PRODUTOS------------------------------------*/
 .bistec-produtos{
-    padding: 7%;
+    padding: 50px 25px;
     display: flex;
-    margin-bottom: 5.8vw;
+    margin-bottom: 2;
 }
 
 .bistec-produtos img{
@@ -252,19 +253,21 @@ ion-icon {
 /*--RODAPÉ---------------------------------------------*/   
 footer{
     background-color: #262525;
-    padding-top: 5%; padding-bottom: 2%;
+    padding-top: 25px; padding-bottom: 25px;
 }
 footer ion-icon{
     color: #D0CEC6;
-    font-size: 8vh;
-    border: #D0CEC6 solid 0.2vw;
+    font-size: 5vh;
+    border: #D0CEC6 solid 2px;
     border-radius: 100%;
-    padding: 1%;
+    padding: 1.4%;
+    margin-bottom: 25px;
 }
 footer ion-icon:hover{
     cursor: pointer;
     background-color: #D0CEC6;
-    color: #141414;
+    color: #262525;
+    transition: 0.7s;
 }
 .redes-sociais{
     display: flex;
@@ -274,29 +277,55 @@ footer ion-icon:hover{
     margin-left: 10%;
     margin-right: 10%;
     border-bottom: 3px solid #A0C8F9;
+    margin: auto;
+    max-width: 70%;
 }
 .ionspecial{
     color: #A0C8F9;
-    border: #A0C8F9 solid 0.2vw;
+    border: #A0C8F9 solid 2px;
     border-bottom: 3px solid #A0C8F9;
 }
 
-footer .contact {
-    margin-top: 10px;
-    display: grid;
+.ionspecial:hover {
+    background-color: #A0C8F9;
+    color: #262525;
+    transition: 0.5s;
 }
 
+.contacts {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+    font-size: 20px;
+    font-weight: 100;
+    max-width: 50%;
+}
+
+footer .item1,
+footer .item2 {
+    margin-top: 25px;
+    padding: 0 5px;
+}
+
+footer .item3,
+footer .item4 {
+    margin-top: 25px;
+    font-size: 20px;
+}
+
+footer .contact p,
 footer .contact a {
     text-decoration: none;
-    font-size: 12px;
+    font-size: 16px;
     color: white;
     text-align: left;
 }
-/*
-.item1 {
-  grid-row-start: 1;
-  grid-column-end: 3;
-}*/
+
+footer .item1 p,
+footer .item2 p,
+footer .item3 p {
+    text-decoration: underline;
+}
 
 /* footer - copyright*/
 
@@ -310,4 +339,5 @@ footer .contact a {
     text-align: center;
     border-style: solid;
     border-color: transparent;
+    user-select: none;
 }
