--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,7 @@ ion-icon {
     margin: 1vw;
     margin-right: 2.5vw;
 }
-.texto-automacao{
+.texto-produtos{
     font-size: 3vw;
     margin-left: 2.5vw;
 }
