--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 *{
     margin: 0 auto;
@@ -17,10 +18,11 @@ header {
     justify-content: space-between;
     align-items: center;
     border-bottom: 2px solid #141414;
+    top: 0;
 }
 
 .header-bistec {
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -34,12 +36,17 @@ header {
     align-items: center;
 }
 
+.logo-bistec img {
+    margin-left: 15px;
+}
+
 header ul {
 	display: inline-flex;
 }
 
 header ul li {
     list-style: none;
+    display: block;
 }
 
 header .normal-menu {
@@ -56,6 +63,7 @@ header .normal-menu li a {
     display: block;
     padding: 8px 8px;
     margin: 0;
+    font-weight: 700;
 }
 
 header .normal-submenu li a {
@@ -65,7 +73,7 @@ header .normal-submenu li a {
     color: #141414;
     background: #F3FAFA;
     font-size: 12px;
-    font-weight: 400;
+    font-weight: 700;
     box-shadow: 0.2px 0.2px 0.2px 0.2px rgba(0, 0, 0, 0.473);
 }
 
@@ -113,7 +121,7 @@ header ul :hover > ul{
 	overflow: hidden;
 	font-family: 'Inter', sans-serif;
 	font-size: 15px;
-	font-weight: 600;
+	font-weight: 900;
 	cursor: pointer;
 }
 
@@ -152,7 +160,7 @@ a {
     cursor: pointer;
     font-size: 16px;
     font-family: 'Inter', sans-serif;
-	font-weight: 600;
+	font-weight: 700;
 }
 
 .normal ion-icon {
@@ -163,9 +171,6 @@ a {
     border-bottom: 3px solid #141414;
 }
 
-ion-icon {
-  color: white;
-}
 
 .button_icon {
 	background: #056006;
@@ -182,7 +187,7 @@ ion-icon {
 	overflow: hidden;
 	font-family: 'Inter', sans-serif;
 	font-size: 15px;
-	font-weight: 600;
+	font-weight: 800;
 	cursor: pointer;
     background: #0c407c;
 }
@@ -229,23 +234,32 @@ ion-icon {
 }
 /*----BANNER---------------------------------------------------------*/
 .banner-bistec{
-    width: 100%;
+    width: auto;
     margin: auto;
     position: relative;
 }
 
 .banner-bistec img{
+    display: block;
     width: 100%;
     height: 580px;
+    margin-top: 77px;
 }
+
+.banner-bistec-mobile {
+    width: auto;
+    margin: auto;
+    display: none;
+}
+
 .banner-bistec-texto{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-35%, -50%);
+    transform: translate(-42%, -50%);
     color: #fff;
     font-size: 4vw;
-    font-weight: 600;
+    font-weight: 300;
 }
 .banner-bistec-texto h2{
     font-size: 3vw;
@@ -258,9 +272,11 @@ ion-icon {
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 300;
 }
 .texto-produtos{
-    margin-left: 2.5vw;;
+    margin-left: 2.5vw;
+    font-weight: 300;
 }
 .bistec-produtos img{
     width: 35vw;
@@ -269,18 +285,37 @@ ion-icon {
 }
 .texto-produtos h2{
     font-size: 3.3vw;
+    font-weight: 500;
 }
 .texto-produtos h4{
     font-size: 2.5vw;
+    font-weight: 400;
 }
 .texto-produtos p{
     font-size: 1.5vw;
+    font-weight: 300;
 }
 
 .texto-produtos{
     padding: 0;
     margin: 0;
     font-size: 20px;
+}
+
+.bt-dialog {
+    font-family: 'Inter', sans-serif;
+    padding: 1.5vh;
+    margin: 0;
+    border: none;
+    outline: none;
+    border-radius: 1vh;
+    overflow: hidden;
+    background-color: #0c407c;
+    color: #F3FAFA;
+    text-transform: uppercase;
+	font-size: 1.25vw;
+	font-weight: 800;
+	cursor: pointer;
 }
 
 /*--RODAPÉ---------------------------------------------*/
@@ -375,11 +410,110 @@ footer .item3 p {
     user-select: none;
 }
 
-@media (max-width: 600px) {
+/*mobile */
+
+@media (max-width: 620px) {
     .header-bistec {
         width: 100%;
         display: block;
         padding: 10px 0;
+    }
+
+    .normal-menu,  
+    .buttons-menu{
+        display: none;
+    }
+
+    .logo-bistec {
+        align-items: flex-start;
+        margin: 0;
+    }
+
+    .menu-cell {
+        display: block;
+        float: right;
+        margin-right: 20px;
+    }
+    .menu-cell li ion-icon {
+        color: #141414;
+        display: block;
+        padding: 0;
+        margin-top: 10px;
+        font-size: 35px;
+    }
+    
+    /* banner */
+
+    .banner-bistec {
+        display: none;
+    }
+    
+    .banner-bistec-mobile {
+        display: block;
+        width: auto;
+        margin: auto;
+        position: relative;
+    }
+
+    .banner-bistec-mobile img{
+        width: 100%;
+        height: 85vh;
+        margin-top: 77px;
+    }
+
+    .banner-bistec-texto {
+        transform: translate(-45%, -50%);
+    }
+
+    .banner-bistec-texto h1 {
+        font-size: 6vw;
+    }
+    .banner-bistec-texto h2 {
+        font-size: 4vw;
+    }
+
+    /* produtos */
+
+    .bistec-produtos {
+        flex-direction: column;
+    }
+    
+    .bt-dialog {
+        padding: 0.95vh;
+    }
+
+    /* rodapé */
+
+    .redes-sociais {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    footer ion-icon {
+        padding: 12px;
+        font-size: 4.5vh;
+    }
+
+    .contacts {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        text-align: left;
+        font-size: 20px;
+        max-width: 55%;
+    }
+
+    .footer-copyright p {
+        max-width: 70%;
+    }
+}
+
+/* tablet */
+@media (min-width: 621px) and (max-width:950px){
+    .header-bistec {
+        width: 100%;
+        display: block;
+        padding: 10px 0;
+        position: relative;
     }
 
     .normal-menu,  
@@ -396,11 +530,58 @@ footer .item3 p {
     .menu-cell {
         display: block;
         float: right;
+        margin-right: 20px;
     }
     .menu-cell li ion-icon {
+        color: #141414;
         display: block;
         padding: 0;
         margin-top: 10px;
         font-size: 35px;
+    }
+
+    /* banner */
+
+    .banner-bistec img {
+        margin-top: 0;
+    }
+
+    /* rodapé */
+
+    .redes-sociais {
+        max-width: 80%;
+    }
+
+    footer ion-icon {
+        padding: 8px;
+        font-size: 2.75vh;
+    }
+
+    .contacts {
+        max-width: 65%;
+    }
+}
+
+@media (min-width: 951px) and (max-width: 1219px){
+    .redes-sociais {
+        max-width: 80%;
+    }
+
+    footer ion-icon {
+        padding: 8px;
+        font-size: 3.5vh;
+    }
+}
+
+/* tv */
+
+@media (min-width: 2400px) {
+    .redes-sociais {
+        max-width: 70%;
+    }
+
+    footer ion-icon {
+        padding: 8px;
+        font-size: 45px;
     }
 }
