--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ header ul :hover > ul{
     display: block;
 }
 
-.button, .bt-dialog {
+.button {
 	display: inline-flex;
     height: 30px;
 	padding: 0;
@@ -303,10 +303,17 @@ a {
 }
 
 .bt-dialog{
-	background: #141414;
+	background-color: #141414;
     margin: 1vw 0vw 0vw 0vw;
-    justify-content: center;
     align-items: center;
+    padding: 0 10px;
+    color: #fff;
+    height: 30px;
+    border-radius: 6px;
+    cursor: pointer;
+	border: none;
+	outline: none;
+    font-weight: 800;
 }
 
 .bt-dialog:hover {
@@ -324,7 +331,7 @@ a {
 }
 
 .modal {
-    display: none; 
+    display: none;
     position: fixed; 
     z-index: 1; 
     left: 0;
@@ -333,48 +340,54 @@ a {
     height: 100%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.7); 
-    
+    background-color: rgba(0,0,0,0.8); 
+    font-family: 'Inter', sans-serif;
   }
 
 .modal-header {
-    padding: 1.5em;
-    background-color: #123354;
-    color: white;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-top-left-radius: 1em;
+    border-top-right-radius: 1em;
+    background-color: #10498a;
+    padding: 0.5em 2em;
+    color: #fff;
+    text-align: center;
+    border-bottom: 1px solid #080808;
   }
   
   .modal-body {
-    padding: 1.5em;
-    background-color: #ffffff
+    padding: 1em 2em;
+    background-color: #ffffff;
+    border-top: 1px solid #080808;
+    border-bottom: 1px solid #080808;
 }
   
   .modal-footer {
-    padding: 1.5em;
+    padding: 0.5em 2em;
     background-color: #141414;
     color: white;   
+    border-top: 1px solid #080808;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    color: #A0C8F9;
   }
   
   .modal-content {
     position: relative;
-    margin: 10% auto;
+    margin: 12% auto;
     padding: 0;
     width: 55%;
     height: 60%;
-    animation-name: animatetop;
+    animation-name: animatepopup;
     animation-duration: 0.4s;
   }
   
-  @keyframes animatetop {
-    from {top: -300px; opacity: 0}
-    to {top: 0; opacity: 1}
+  @keyframes animatepopup {
+    from {left: -1300px; opacity: 0}
+    to {left: 0; opacity: 1}
   }
 
 .close {
-    color: #aaa;
+    color: rgb(216, 216, 216);
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -552,22 +565,45 @@ footer .item3 p {
 
     .bistec-produtos {
         flex-direction: column;
+        margin-top: 5em;
+    }
+
+    .bistec-produtos img {
+      width: 65%;
+    }
+
+    .texto-produtos {
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      max-width: 85%;
+    }
+    .texto-produtos h2{
+      text-align: center;
+      font-size: 5.2vw;
+      font-weight: 500;
+    }
+    .texto-produtos h4{
+        text-align: center;
+        font-size: 4.2vw;
+        font-weight: 400;
     }
     
     .bt-dialog {
-        padding: 0;
-    }
-
-    .bt-dialog ion-icon{
-        color: rgb(255, 255, 255);
-        font-size: 4vw;
+        padding: 0 10px;
+        margin: auto;
+        margin-top: 3.5vh;
     }
     
     .bt-dialog .button_text {
-        font-size: 2vh;
+        font-size: 3vh;
     }
 
     /* rodapé */
+
+    footer {
+        margin-top: 2em;
+    }
 
     .redes-sociais {
         display: grid;
@@ -631,7 +667,48 @@ footer .item3 p {
         margin-top: 0;
     }
 
+    /* produtos */
+
+    .bistec-produtos {
+        flex-direction: column;
+        margin-top: 5em;
+    }
+
+    .bistec-produtos img {
+      width: 55%;
+    }
+
+    .texto-produtos {
+      display: flex;
+      flex-direction: column;
+      margin: auto;
+      max-width: 85%;
+    }
+    .texto-produtos h2{
+      text-align: center;
+      font-size: 4.6vw;
+      font-weight: 500;
+    }
+    .texto-produtos h4{
+        text-align: center;
+        font-size: 3.2vw;
+        font-weight: 400;
+    }
+    
+    .bt-dialog {
+        margin: auto;
+        margin-top: 2vh;
+    }
+    
+    .bt-dialog .button_text {
+        font-size: 25px;
+    }
+
     /* rodapé */
+
+    footer {
+        margin-top: 4vh;
+    }
 
     .redes-sociais {
         max-width: 80%;
@@ -639,7 +716,6 @@ footer .item3 p {
 
     footer ion-icon {
         padding: 8px;
-        font-size: 2.75vh;
     }
 
     .contacts {
