corrige menu mobile logica, falta desing

--- a/assets/css/styleMobile.css
+++ b/assets/css/styleMobile.css
@@ -7,7 +7,7 @@
     }
 
     .normal-menu{
-        background-color: rgb(124, 147, 164);
+        background-color: #F3FAFA;
         display: none;
         position: absolute;
         width: 100%;
