--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,10 @@ header {
 }
 
 .header-bistec {
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    position: fixed;
     padding: 10px 100px;
     display: flex;
     justify-content: space-between;
@@ -104,7 +104,7 @@ header .normal-submenu li a:hover > ion-icon {
     color: #fff;
 }
 
-header ul :hover > ul:focus{
+header ul :hover > ul{
     display: block;
 }
 
