página de suporte feita e algumas mudanças no header e modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ header .normal-submenu li a:hover {
 
 header ul ul {
     position: absolute;
-    top: 45px;
+    top: 50px;
     display: none;
 }
 
@@ -160,6 +160,7 @@ a {
     font-size: 16px;
     font-family: 'Inter', sans-serif;
 	font-weight: 700;
+    line-height: 2;
 }
 
 .normal ion-icon {
@@ -401,7 +402,6 @@ a {
     margin: 10% auto;
     padding: 0;
     width: 50%;
-    height: 63%;
     animation-name: animatepopup;
     animation-duration: 0.4s;
 }
@@ -445,6 +445,7 @@ footer ion-icon{
     border: #D0CEC6 solid 2px;
     border-radius: 100%;
     padding: 1.4%;
+    margin: 0.3em auto;
 }
 footer ion-icon:hover{
     cursor: pointer;
