--- a/assets/css/styleSuporte.css
+++ b/assets/css/styleSuporte.css
@@ -66,3 +66,18 @@
     color: #08457a;
     text-decoration: underline;
 }
+
+@media (max-width: 620px) {
+    .bistec-suporte h1 {
+        font-size: 7vw;
+    }
+
+    .bistec-suporte p {
+        font-size: 4vw;
+        padding: 1.75vh 0;
+    }
+
+    footer ion-icon {
+        margin: 0.3em auto;
+    }
+}
