botão modal att

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,6 +416,8 @@ a {
     float: right;
     font-size: 28px;
     font-weight: bold;
+    border: none;
+    background-color: #10498a;
 }
   
   .close:hover,
