mudanças no tamanho do banner, header e ícones das redes

--- a/assets/css/styleTv.css
+++ b/assets/css/styleTv.css
@@ -2,6 +2,10 @@
 /* tv */
 
 @media (min-width: 2400px) {
+
+    .bt-dialog {
+        padding: 2.5em 1em;
+    }
     .redes-sociais {
         max-width: 70%;
     }
