--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 2px solid #141414;
+    border-bottom: 1px solid #b3b3b3;
     top: 0;
 }
 
@@ -26,7 +26,7 @@ header {
     left: 0;
     width: 100%;
     position: fixed;
-    padding: 10px 100px;
+    padding: 2px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -244,8 +244,8 @@ a {
 .banner-bistec img{
     display: block;
     width: 100%;
-    height: 580px;
-    margin-top: 77px;
+    height: 92vh;
+    margin-top: 56px;
 }
 
 .banner-bistec-mobile {
@@ -446,7 +446,7 @@ footer ion-icon{
     font-size: 5vh;
     border: #D0CEC6 solid 2px;
     border-radius: 100%;
-    padding: 1.4%;
+    padding: 0.3em;
     margin: 0.3em auto;
 }
 footer ion-icon:hover{
