--- a/assets/css/styleSuporte.css
+++ b/assets/css/styleSuporte.css
@@ -2,7 +2,7 @@
     max-width: 70%;
     color: #141414;
     margin: auto;
-    margin-top: 77px;
+    margin-top: 62px;
     text-align: center;
     padding: 5vh 0;
 }
@@ -34,6 +34,7 @@
 	border: none;
 	outline: none;
     font-weight: 700;
+    max-width: 40%;
 }
 
 .bt-dialog-anydesk:hover {
@@ -51,6 +52,7 @@
 	outline: none;
     font-weight: 700;
     margin-bottom: 1vw;
+    max-width: 40%;
 }
 
 .bt-dialog-teamviewer:hover {
