--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,8 +60,8 @@ header .normal-menu li{
 
 header .normal-menu li a {
     display: block;
-    padding: 8px 8px;
-    margin: 0;
+    padding: 0;
+    margin: 0 8px;
     font-weight: 700;
 }
 
@@ -96,7 +96,7 @@ header .normal-submenu li a:hover {
 
 header ul ul {
     position: absolute;
-    top: 50px;
+    top: 34px;
     display: none;
 }
 
@@ -112,7 +112,7 @@ header ul :hover > ul{
 	display: inline-flex;
     height: 30px;
 	padding: 0;
-    margin: 0 10px;
+    margin: 0;
 	background: #BB0A0A;
 	border: none;
 	outline: none;
@@ -169,7 +169,7 @@ a {
 
 .normal:hover{
     border-bottom: 3px solid #141414;
-}
+} 
 
 
 .button_icon {
@@ -439,7 +439,7 @@ footer{
     background-color: #262525;
     padding-top: 25px; padding-bottom: 25px;
     border-bottom: 1px solid #A0C8F9;
-    border-top: 2px solid #A0C8F9;
+    border-top: 5px solid #A0C8F9;
 }
 footer ion-icon{
     color: #D0CEC6;
@@ -483,7 +483,7 @@ footer ion-icon:hover{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     text-align: left;
-    border-top: 3px solid #a0c8f9;
+    border-top: 2px solid #a0c8f9;
     font-size: 20px;
     font-weight: 100;
     max-width: 60%;
