--- a/assets/css/styleTablet.css
+++ b/assets/css/styleTablet.css
@@ -15,7 +15,7 @@
         right: 0;
         top: 0;
         padding: 3% 8%;
-        border-bottom: 2px solid black;
+        border-bottom: 1px solid #b3b3b3;
     }
 
     .logo-bistec {
@@ -48,6 +48,10 @@
 
     .normal-menu li{
         width: fit-content;
+    }
+
+    .button_support {
+        margin-top: 6%;
     }
 
     /* banner */
