--- a/assets/css/styleTablet.css
+++ b/assets/css/styleTablet.css
@@ -113,6 +113,8 @@
     }
 
     .contacts {
-        max-width: 65%;
+        max-width: 75%;
+        grid-template-columns: repeat(1, 2fr);
+        font-size: 24px;
     }
 }
