corrigindo redirecionamento no header mobile e mudança do banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,7 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-42%, -50%);
-    color: #fff;
+    color: rgb(255, 255, 255);
     font-size: 4vw;
     font-weight: 300;
 }
