adociona componente rodape nas paginas de email e ionicon de negativo

--- a/assets/css/styleEmail.css
+++ b/assets/css/styleEmail.css
@@ -21,6 +21,9 @@
     color: rgb(46, 206, 81);
     opacity: 0.3;
 }
+.email-enviado #ionicEmailFalhou{
+    color: rgb(244, 18, 18);
+}
 
 @media (max-width: 620px){
     .email-enviado{
