--- a/assets/css/styleContato.css
+++ b/assets/css/styleContato.css
@@ -60,8 +60,17 @@ input[type=submit]:hover {
     color: #161616;
 }
 
+input[type=submit]:focus-within {
+    cursor: pointer;
+    background-color: #A0C8F9;
+    color: #161616;
+}
+
 
 @media (max-width: 620px) {
+    .formulario h1 {
+        font-size: 1.5em;
+    }
     .formulario form h3 {
         font-size: 1.4em;
     }
