--- a/assets/css/styleDark.css
+++ b/assets/css/styleDark.css
@@ -1,11 +1,13 @@
 @media (prefers-color-scheme: dark) {
     
-    #logo_normal {
+    header .logo-bistec img:nth-child(1){
         display: none;
     }
-    #logo_branca {
-        display: block;
+
+    header .logo-bistec img:nth-child(2){
+        display: inherit;
     }
+
     .header-bistec {
         background-color: #141414;
     }
@@ -66,6 +68,10 @@
         color: #f3fafa;
     }
 
+    .menu-cell {
+        color: #fff;
+    }
+
     /* produtos */
 
     article {
@@ -79,8 +85,11 @@
 
     .bt-dialog {
         background-color: #A0C8F9;
-        color: #141414;
     }
+
+    .texto-produtos .button_text {
+        color: #141414;
+      }
 
     .bt-dialog:hover,
     .bt-dialog:focus-within {
@@ -159,5 +168,42 @@
     .produto-texto .link_msp {
         color: #8bc2f1;
     }
+}
 
+@media (prefers-color-scheme: dark) and (max-width: 620px) {
+
+    .menu-cell {
+        display: block;
+        color: #fff;
+    }
+
+    .menu-cell li ion-icon {
+        color: #f3fafa;
+    }
+    
+    .normal-menu {
+        text-align: center;
+        background-color: #141414;
+        color: #f3fafa;
+    }
+
+    .normal:hover{
+        border: none;
+        color: #A0C8F9;
+        transition: 0.2s;
+    } 
+
+    .button_support,
+    .support_icon {
+        background: #0c407c;
+        color: #f3fafa;
+    }
+
+    .button_support .button_text {
+        color: #f3fafa;
+    }
+
+    .texto-produtos .button_text {
+        color: #141414;
+    }
 }
