--- a/assets/css/styleMobile.css
+++ b/assets/css/styleMobile.css
@@ -160,6 +160,7 @@
       flex-direction: column;
       margin: auto;
       max-width: 85%;
+      font-size: 0.8em;
     }
     .texto-produtos h2{
       text-align: center;
@@ -173,9 +174,11 @@
     }
     
     .bt-dialog {
-        padding: 0 10px;
+        padding: 10px 10px;
         margin: auto;
         margin-top: 2vh;
+        height: auto;
+        text-align: center;
     }
     
     .bt-dialog .button_text {
