configra para imagem se configurar o tamanho automaticamente com a troca da resolução

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,16 +256,16 @@ a {
 
 .banner-bistec img{
     display: block;
-    width: 100%;
-    height: 92vh;
-    margin-top: 56px;
+    /* width: 100%;
+    height: 92vh; 
+    margin-top: 56px;*/
 }
 
-.banner-bistec-mobile {
+/* .banner-bistec-mobile {
     width: auto;
     margin: auto;
     display: none;
-}
+} */
 
 .banner-bistec-texto{
     position: absolute;
