corrige resolução de logo do menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,8 @@ header {
 }
 
 .logo-bistec img {
-    margin-left: 15px;
+    margin-bottom: 1vh;
+    width: 16vw;
 }
 
 /* trocando imagens logo - dark mode*/
